1999-01-27  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Remove test CHECK_WAIT_TYPE since nothing is using
		the results of that test (WAIT_USES_INT).

1998-08-16    <hartmans@fundsxpress.com>

	* Makefile.in (SHLIB_EXPDEPS): Depend on lib_comerr

1998-07-05    <hartmans@fundsxpress.com>

	* update_utmp.c (pty_update_utmp): If the ut_exit differs test
	indicates the structures differ, and we don't have a special case,
	do nothing rather than trying to copy the field.  It's not worth
	breaking the build over.

Mon Apr  6 19:35:33 1998  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* update_utmp.c (pty_update_utmp): Don't record LOGIN_PROCESS
	entries, as they confuse last on some systems. [pty/569]

Thu Mar 12 18:09:25 1998  Tom Yu  <tlyu@mit.edu>

	* update_utmp.c (pty_update_utmp): Fix bogus entry of
	PTY_LOGIN_PROCESS types on BSD-ish systems. [pty/531]

Wed Feb 18 16:33:58 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 16:18:08 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

	* configure.in, Makefile.in: Remove CopySrcHeader and CopyHeader 
		from configure.in and move equivalent functionality to
		Makefile.in 

Sun Dec  7 00:05:28 1997  Tom Yu  <tlyu@mit.edu>

	* getpty.c (pty_getpty): Fix goof in previous, which introduced
	another fencepost error.

Thu Dec  4 21:48:12 1997  Tom Yu  <tlyu@mit.edu>

	* getpty.c (pty_getpty): Fix checks on string lengths to account
	for terminating nul character.  Some whitespace fixups.

Wed Dec  3 17:16:44 1997  Tom Yu  <tlyu@mit.edu>

	* pty_err.et: Add PTY_OPEN_SLAVE_TOOSHORT error code.

	* open_slave.c (pty_open_slave): Check to ensure that the slave
	name is not NULL or zero-length.

Tue Oct 28 13:28:54 1997  Ezra Peisach  <epeisach@.mit.edu>

	* pty-int.h: Do not prototype initialize_pty_error_table as
	        pty-err.h does as well.
