@@ -1,3 +1,12 @@
+Thu Feb 11 22:24:03 1999  Tom Yu  <tlyu@mit.edu>
+
+	* Makefile.in: Add sane_hostname.{o,c}
+
+	* libpty.h: Add prototype for make_sane_hostname.
+
+	* sane_hostname.c: New file; add function to "sanitize" hostname
+	for logging purposes.
+
 1999-01-27  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* configure.in: Remove test CHECK_WAIT_TYPE since nothing is using
